[gd_scene load_steps=2 format=2]

[ext_resource path="res://Stats/Stats.gd" type="Script" id=1]

[node name="Stats" type="Node"]
script = ExtResource( 1 )

[node name="RegenTimer" type="Timer" parent="."]
autostart = true

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="RegenTimer" to="." method="_on_RegenTimer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
